--- a/resourse/css/style.css
+++ b/resourse/css/style.css
@@ -82,9 +82,12 @@ section {
 }
 
 #imgbanner, #img-information {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     width: 60%;
     overflow: hidden;
-    padding: 32px 24px;
+    padding: 2rem 1.5rem;
 }
 
 #info-banner {
@@ -92,7 +95,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 40%;
 
 }
 
@@ -105,6 +108,7 @@ section {
     font-size: 1.5rem;
 }
 
+
 #info-banner button {
     width: 100%;
     padding: 18px 0;
@@ -112,12 +116,45 @@ section {
     color: white;
 }
 
+#img-info {
+    margin: 32px auto;
+
+}
+
+#img-information h2 {
+    margin-bottom: 24px;
+}
+
+#img-information #adress {
+    font-size: .75rem;
+}
+
 #side-information {
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction: column;
+    padding-top: 32px;
 }
 
 #side-info {
     display: flex;
+}
+
+#side-info-img {
+    width: 35%;
+}
+
+#info-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#info-text a {
+    color: blue;
+}
+
+#side-information .grey {
+
+    background-color: lightgray;
 }
